# cpustate-tui

./: .gitignore  Cargo.toml  Makefile  README.md
image/: Cargo.toml  build.rs
kernel/: Cargo.toml
kernel/src/: app.rs  app_state.rs  cpuid.rs  fpu.rs  input.rs  interrupts.rs  ioapic.rs  lapic.rs  main.rs  memory.rs  mode.rs  msr.rs  pane.rs  qemu.rs  ratatui_backend.rs  scroll.rs  serial.rs  timer.rs  view.rs  xsave.rs
search/: Cargo.toml
search/src/: lib.rs
